# norma_pl_251-21

./: README.md  pyproject.toml
scripts/: 01_get_infos.ipynb  02_create_map.ipynb  03_create_map_consorcio.ipynb  04_graphs_maplib.ipynb  05_graphs_plotly.ipynb  paths.py
